# sustainability-training-ai

./: .env.example  .gitignore  README.md  app.py  panel_app.py  pyproject.toml  render.yaml  requirements.txt  start_panel.py  startguide.md  test_api_simple.py  test_marketing_compliance.py  test_models.py
knowledge/: user_preference.txt
src/sustainability/: agent_runner.py  callbacks.py  config_loader.py  crew.py  main.py  (+2 more)
test_outputs/: marketing_test_result_20250814_131823.json  marketing_test_result_20250814_133323.json  marketing_test_result_20250814_134726.json  marketing_test_result_20250814_135451.json  marketing_test_result_20250814_144802.json  marketing_test_result_20250814_145539.json  marketing_test_result_20250814_150130.json  marketing_test_result_20250814_160108.json  marketing_test_result_20250814_161000.json  marketing_test_result_20250814_161619.json  marketing_test_result_20250814_162612.json  marketing_test_result_20250814_163503.json  marketing_test_result_20250814_184903.json  marketing_test_summary_20250814_131823.txt  marketing_test_summary_20250814_133323.txt  marketing_test_summary_20250814_134726.txt  marketing_test_summary_20250814_135451.txt  marketing_test_summary_20250814_144802.txt  marketing_test_summary_20250814_145539.txt  marketing_test_summary_20250814_150130.txt  marketing_test_summary_20250814_160108.txt  marketing_test_summary_20250814_161000.txt  marketing_test_summary_20250814_161619.txt  marketing_test_summary_20250814_162612.txt  marketing_test_summary_20250814_163503.txt  marketing_test_summary_20250814_184903.txt
(+4 files in other folders)
