[project]
name = "sustainability"
version = "0.1.0"
description = "sustainability using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
sustainability = "sustainability.main:run"
run_crew = "sustainability.main:run"
train = "sustainability.main:train"
replay = "sustainability.main:replay"
test = "sustainability.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
